# mkdocsdemo

./: README.md  build.sh  mkdocs.yml  pyproject.toml  requirements-vercel.txt  requirements.txt  vercel.json  wrangler.jsonc
docs/: AttendantConsole.md  BrigantineMigration.md  guacamole-access.md  guacamole.md  index.md  logepal.md  verint.md  webexAC.md
docs/admingiudes/: index.md  voicemail.html  voicemail.md
docs/cc/: index.md  middle.md  pcce.md  serverdata.md
docs/fg/: portingnumbers.md
docs/javascripts/: credentials.js
docs/overrides/: main.html
docs/overrides/macros/: main.py  mkdocs_macros.py
docs/overrides/partials/: content.html.back
docs/stylesheets/: activeo-colors.css  buttons.css  extra.css  fullwidth.css
docs/webex-calling/: voicemail.md
public/: 404.html  index.html
public/BrigantineMigration/: index.html
public/admingiudes/: index.html
public/admingiudes/voicemail/: index.html
public/cc/: index.html
public/cc/middle/: index.html
public/cc/pcce/: index.html
public/cc/serverdata/: index.html
public/logepal/: index.html
public/overrides/: main.html
public/search/: search_index.json
public/stylesheets/: backtotop.css  disable-right-toc.css  extra.css  sidebar-collapse.css
public/verint/: index.html
site/: 404.html  index.html
site/cc/: index.html
site/cc/middle/: index.html
site/images/: 488700.avif
site/javascripts/: backtotop.js
site/logepal/: index.html
site/search/: search_index.json
site/stylesheets/: activeo-colors.css  buttons.css  extra.css  sidebar-collapse.css
site/verint/: index.html
(+5 files in other folders)
