[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs"
version = "0.1.0"
description = "MkDocs documentation site"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Konstantin Vaksin" }
]

dependencies = [
  "mkdocs>=1.4.0",
  "mkdocs-material>=9.0.0",
  "mkdocs-glightbox>=0.1.0",
  "mkdocs-macros-plugin>=1.5.0"
]
